--- a/assets/css/highlighter.css
+++ b/assets/css/highlighter.css
@@ -15,6 +15,7 @@
     position: absolute;
     display: none;
     z-index: 100000;
+    font-family: sans-serif !important;
   }
   #politeia-hl-note-popover .note-content {
     border: none;
@@ -24,7 +25,8 @@
     padding: 12px;
     width: 320px;
     max-width: calc(100vw - 24px);
-    font: 14px/1.45 system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+    font: 14px/1.45;
+    font-family: sans-serif !important;
   }
   #politeia-hl-note-popover .note-text {
     white-space: pre-wrap;
