--- a/assets/css/highlighter.css
+++ b/assets/css/highlighter.css
@@ -20,7 +20,8 @@
   #politeia-hl-note-popover .note-content {
     border: none;
     box-shadow: none;
-    background: none;
+    background: white;
+    box-shadow: 0 0px 25px rgba(0,0,0,.25);
     border-radius: 10px;
     padding: 12px;
     width: 320px;
@@ -55,6 +56,6 @@
 
   /* Space below color swatches */
   .hl-colors {
-    padding-bottom: 5px;
+    padding-bottom: 10px;
   }
   
