--- a/modules/highlight-table/assets/css/highlight-table.css
+++ b/modules/highlight-table/assets/css/highlight-table.css
@@ -14,3 +14,8 @@
     cursor: pointer;
     background: #f5f5f5;
 }
+
+.politeia-hl-table .hl-date-time {
+    display: block;
+    font-size: 0.9em;
+}
