Improve mobile table cell layout

--- a/modules/highlight-table/assets/css/highlight-table.css
+++ b/modules/highlight-table/assets/css/highlight-table.css
@@ -82,7 +82,8 @@
 
     .politeia-hl-table tbody td {
         display: block;
-        width: 100%;
+        width: 80%;
+        margin: auto;
         text-align: center;
     }
 
