--- a/modules/highlight-table/assets/css/highlight-table.css
+++ b/modules/highlight-table/assets/css/highlight-table.css
@@ -51,6 +51,20 @@
     font-size: 18px;
 }
 
+.politeia-hl-table .hl-note .hl-note-edit {
+    margin-left: 8px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.politeia-hl-table .hl-note textarea {
+    width: 100%;
+    box-sizing: border-box;
+    min-height: 60px;
+    font-size: 16px;
+    margin-bottom: 4px;
+}
+
 /* Thin separator above date/time */
 .politeia-hl-table .hl-date-separator {
     border: none;
