--- a/modules/highlight-table/assets/css/highlight-table.css
+++ b/modules/highlight-table/assets/css/highlight-table.css
@@ -61,7 +61,7 @@
     width: 100%;
     box-sizing: border-box;
     min-height: 60px;
-    font-size: 16px;
+    font: inherit;
     margin-bottom: 4px;
 }
 
