Auto-resize note editor and simplify border

--- a/modules/highlight-table/assets/css/highlight-table.css
+++ b/modules/highlight-table/assets/css/highlight-table.css
@@ -63,6 +63,15 @@
     min-height: 60px;
     font: inherit;
     margin-bottom: 4px;
+    border: 1px solid #000;
+    outline: none;
+    box-shadow: none;
+}
+
+.politeia-hl-table .hl-note textarea:focus {
+    border: 1px solid #000;
+    outline: none;
+    box-shadow: none;
 }
 
 /* Thin separator above date/time */
