--- a/modules/highlight-table/assets/css/highlight-table.css
+++ b/modules/highlight-table/assets/css/highlight-table.css
@@ -49,12 +49,20 @@
 /* Style for note column */
 .politeia-hl-table .hl-note {
     font-size: 18px;
+    display: flex;
+    align-items: flex-start;
+}
+
+.politeia-hl-table .hl-note .note-display,
+.politeia-hl-table .hl-note textarea {
+    flex: 1;
 }
 
 .politeia-hl-table .hl-note .hl-note-edit {
-    margin-left: 8px;
+    margin-left: auto;
     font-size: 14px;
     cursor: pointer;
+    color: #2196F3;
 }
 
 .politeia-hl-table .hl-note textarea {
