--- a/modules/highlight-table/assets/css/highlight-table.css
+++ b/modules/highlight-table/assets/css/highlight-table.css
@@ -20,6 +20,12 @@
     text-align: left;
 }
 
+/* Keep the note column width consistent across filters */
+.politeia-hl-table th:nth-child(2),
+.politeia-hl-table td:nth-child(2) {
+    width: 30%;
+}
+
 .politeia-hl-table th + th,
 .politeia-hl-table td + td {
     border-left: 1px solid #ccc;
