--- a/modules/highlight-table/assets/css/highlight-table.css
+++ b/modules/highlight-table/assets/css/highlight-table.css
@@ -1,6 +1,6 @@
 .politeia-hl-table {
     width: 100%;
-    border-spacing: 10px 0;
+    border-spacing: 10px 30px;
 }
 
 .politeia-hl-table tr {
@@ -51,18 +51,13 @@
 .politeia-hl-table .hl-text,
 .politeia-hl-table .hl-note {
     border: 1px solid #000;
-}
-
-.politeia-hl-table .hl-text {
-    border-radius: 9px 9px 0 0;
+    border-radius: 9px;
 }
 
 .politeia-hl-table .hl-note {
     font-size: 18px;
     position: relative;
     padding-bottom: 24px;
-    border-top: none;
-    border-radius: 0 0 9px 9px;
 }
 
 .politeia-hl-table .hl-note .note-display,
@@ -116,6 +111,19 @@
 }
 
 @media (max-width: 767px) {
+    .politeia-hl-table {
+        border-spacing: 10px 0;
+    }
+
+    .politeia-hl-table .hl-text {
+        border-radius: 9px 9px 0 0;
+    }
+
+    .politeia-hl-table .hl-note {
+        border-top: none;
+        border-radius: 0 0 9px 9px;
+    }
+
     .politeia-hl-filter {
         flex-direction: column;
         align-items: center;
