Hide Notes header on small screens

--- a/modules/highlight-table/assets/css/highlight-table.css
+++ b/modules/highlight-table/assets/css/highlight-table.css
@@ -138,13 +138,8 @@
         justify-content: center;
     }
 
-    .politeia-hl-table th:first-child {
+    .politeia-hl-table th {
         display: none;
-    }
-
-    .politeia-hl-table th:nth-child(2),
-    .politeia-hl-table td:nth-child(2) {
-        width: 80%;
     }
 
     .politeia-hl-table tbody tr {
