--- a/modules/highlight-table/assets/css/highlight-table.css
+++ b/modules/highlight-table/assets/css/highlight-table.css
@@ -12,6 +12,7 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #000;
+    padding-bottom: 10px;
 }
 
 .politeia-hl-title {
@@ -155,6 +156,9 @@
     .politeia-hl-filter {
         flex-direction: column;
         align-items: center;
+        padding: 10px;
+        border-bottom: none;
+        width: 80%;
     }
 
     .politeia-hl-filter .politeia-hl-title {
@@ -164,6 +168,7 @@
     .politeia-hl-filter .hl-colors {
         margin-left: 0;
         justify-content: center;
+        margin-top: 10px;
     }
 
     .politeia-hl-table th {
